corrected link errors, adjusted picture alignment on index

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -2,22 +2,47 @@ body {
     background-color: #284a4b;
     font-family: Arial, Helvetica, sans-serif;
 }
+header {
+  text-align: center;
+  justify-content: center;
+}
+
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    list-style-type: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #056dce;
+    color: white;
+  }
 
 h1,h2,h3 {
     color: #00ffff;
     text-align: center;
 }
 
-p,ul { 
+p { 
     color: #7fffd4;
     text-align: center;
 }
 
-ul {
-    list-style-position: inside;
-}
-
-#images {
-    display: flex;
+span {
     justify-content: center;
+    display: flex;
 }
